kotlin-ide/idea/testData/multiModuleLineMarker/fromClassToJavaAliasInTest/jvm/empty.kt
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>Expected<!> = ExpectedImpl